--- a/themes/bootstrap3/templates/record/view.phtml
+++ b/themes/bootstrap3/templates/record/view.phtml
@@ -63,6 +63,20 @@
               if (!$obj->supportsAjax()) {
                 $tabClasses[] = 'noajax';
               }
+
+              $deps = $obj->getDependencies();
+              if (!empty($deps)) {
+                if (!empty($deps['css'])) {
+                  foreach($deps['css'] as $css) {
+                    $this->headLink()->appendStylesheet($css);
+                  }
+                }
+                if (!empty($deps['js'])) {
+                  foreach($deps['js'] as $js) {
+                    $this->headScript()->appendFile($js);
+                  }
+                }
+              }
             ?>
             <li class="<?=implode(' ', $tabClasses)?>" role="tab" data-tab="<?=$this->escapeHtmlAttr($tabName)?>"<?php if ($obj->supportsAjax() && in_array($tab, $this->backgroundTabs)):?> data-background<?php endif ?>>
               <a href="<?=$this->escapeHtmlAttr($this->recordLinker()->getTabUrl($this->driver, $tab))?>#tabnav" data-lightbox-ignore>
