--- a/themes/sandal/scss/keyboard.scss
+++ b/themes/sandal/scss/keyboard.scss
@@ -1,5 +1,5 @@
 .searchForm .keyboard-selection{
-  top: 6px;
+  bottom: 2px;
 
   button.dropdown-toggle {
     color: $input-color;
@@ -20,6 +20,6 @@
 }
 
 .keyboard-box {
-  top: 43px;
+  top: 44px;
   color: $input-color;
 }
