--- a/themes/sandal/scss/search.scss
+++ b/themes/sandal/scss/search.scss
@@ -191,7 +191,36 @@
 #searchForm {
   padding-top: .5rem;
   padding-bottom: calc(#{$search-tab-height} + 1.5rem);
+
+  .keyboard-selection {
+    bottom: 2px;
+
+    button.dropdown-toggle {
+      color: $input-color;
+      background-color: white;
+
+      &:hover, &:focus {
+        color: $input-color;
+        background-color: $header-light;
+      }
+    }
+
+    .dropdown-menu .active a,
+    .dropdown-menu .active a:hover {
+      background-color: $header-bg;
+    }
+
+    .btn-primary {
+      height: 20px;
+    }
+  }
 }
+
+.keyboard-box {
+  top: 44px;
+  color: $input-color;
+}
+
 .nav.searchbox,
 #searchForm {
   position: relative;
