--- a/themes/bootstrap3/templates/search/searchbox.phtml
+++ b/themes/bootstrap3/templates/search/searchbox.phtml
@@ -74,36 +74,35 @@
   <form id="searchForm" class="searchForm navbar-form navbar-left flip" method="get" action="<?=$this->url($basicSearch)?>" name="searchForm" autocomplete="off">
     <?= $this->context($this)->renderInContext('search/searchTabs', ['searchTabs' => $tabConfig['tabs'], 'showCounts' => $tabConfig['showCounts']]); ?>
     <?php $placeholder = $this->searchbox()->getPlaceholderText($tabConfig['selected']['id'] ?? null); ?>
-    <div class="input-group">
-      <div class="searchForm-query">
-        <input id="searchForm_lookfor" class="searchForm_lookfor form-control search-query<?php if ($this->searchbox()->autocompleteEnabled($this->searchClassId)):?> autocomplete searcher:<?=$this->escapeHtmlAttr($this->searchClassId) ?><?=$this->searchbox()->autocompleteAutoSubmit($this->searchClassId) ? ' ac-auto-submit' : '' ?><?php endif ?>" type="search" name="lookfor" value="<?=$this->escapeHtmlAttr($this->lookfor)?>"<?php if ($placeholder): ?> placeholder="<?=$this->transEscAttr($placeholder) ?>"<?php endif ?> aria-label="<?=$this->transEscAttr('search_terms')?>">
-        <button id="searchForm-reset" class="searchForm-reset" type="reset" tabindex="-1" aria-label="<?=$this->transEsc('searchform_reset_button')?>"><?=$this->icon('ui-reset-search');?></button>
-      </div>
-      <?php if (!empty($keyboardLayouts)): ?>
-        <?php
-        $this->headScript()->appendFile("vendor/js.cookie.js");
-        $this->headScript()->appendFile('vendor/simple-keyboard/index.js');
-        $this->headScript()->appendFile('vendor/simple-keyboard-layouts/index.js');
-        $this->headScript()->appendFile('keyboard.js');
-        $this->headLink()->appendStylesheet('vendor/simple-keyboard/index.css');
-        ?>
-        <div class="keyboard-selection dropdown">
-          <button class="btn btn-primary dropdown-toggle" type="button" id="keyboard-selection-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <?=$this->icon('keyboard-o') ?>
-            <?=$this->icon('caret-down') ?>
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="keyboard-selection-button">
-            <li>
-              <a class="keyboard-selection-item" href="#" data-value="none"><?= $this->transEsc('None') ?></a>
-            </li>
-            <?php foreach ($keyboardLayouts as $keyboardLayout): ?>
+    <div class="searchForm-query input-group">
+      <input id="searchForm_lookfor" class="searchForm_lookfor form-control search-query<?php if ($this->searchbox()->autocompleteEnabled($this->searchClassId)):?> autocomplete searcher:<?=$this->escapeHtmlAttr($this->searchClassId) ?><?=$this->searchbox()->autocompleteAutoSubmit($this->searchClassId) ? ' ac-auto-submit' : '' ?><?php endif ?>" type="search" name="lookfor" value="<?=$this->escapeHtmlAttr($this->lookfor)?>"<?php if ($placeholder): ?> placeholder="<?=$this->transEscAttr($placeholder) ?>"<?php endif ?> aria-label="<?=$this->transEscAttr('search_terms')?>">
+      <div id="searchForm_controls">
+        <button id="searchForm-reset" class="searchForm-reset" type="button" tabindex="-1" aria-label="<?=$this->transEsc('searchform_reset_button')?>"><?=$this->icon('ui-reset-search');?></button>
+        <?php if (!empty($keyboardLayouts)): ?>
+          <?php
+          $this->headScript()->appendFile("vendor/js.cookie.js");
+          $this->headScript()->appendFile('vendor/simple-keyboard/index.js');
+          $this->headScript()->appendFile('vendor/simple-keyboard-layouts/index.js');
+          $this->headLink()->appendStylesheet('vendor/simple-keyboard/index.css');
+          ?>
+          <div class="keyboard-selection dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="keyboard-selection-button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <?=$this->icon('keyboard-o') ?>
+              <?=$this->icon('caret-down') ?>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="keyboard-selection-button">
               <li>
-                <a class="keyboard-selection-item" href="#" data-value="<?= $keyboardLayout ?>"><?= $this->transEsc($keyboardLayout) ?></a>
+                <a class="keyboard-selection-item" href="#" data-value="none"><?= $this->transEsc('None') ?></a>
               </li>
-            <?php endforeach; ?>
-          </ul>
-        </div>
-      <?php endif; ?>
+              <?php foreach ($keyboardLayouts as $keyboardLayout): ?>
+                <li>
+                  <a class="keyboard-selection-item" href="#" data-value="<?= $keyboardLayout ?>"><?= $this->transEsc($keyboardLayout) ?></a>
+                </li>
+              <?php endforeach; ?>
+            </ul>
+          </div>
+        <?php endif; ?>
+      </div>
     </div>
     <?php if ($handlerCount > 1): ?>
       <select id="searchForm_type" class="searchForm_type form-control" name="type" data-native-menu="false" aria-label="<?=$this->transEscAttr('Search type')?>">
