moved keyboard to bottom of screen

--- a/themes/bootprint3/less/search.less
+++ b/themes/bootprint3/less/search.less
@@ -87,7 +87,19 @@
 }
 
 .keyboard-box {
-  top: 44px;
+  width: 85%;
+
+  @media (min-width: 768px) {
+    width: 635px;
+  }
+
+  @media (min-width: 992px) {
+    width: 832px;
+  }
+
+  @media (min-width: 1200px) {
+    width: 832px;
+  }
 }
 
 .top-facets .facet a { vertical-align: middle; }
