--- a/themes/bootstrap3/scss/components/keyboard.scss
+++ b/themes/bootstrap3/scss/components/keyboard.scss
@@ -25,9 +25,23 @@
 }
 
 .keyboard-box {
-  position: relative;
-  top: $input-height-base + 4px;
+  position: fixed;
+  bottom: 250px;
   height: 0;
+  z-index: 4;
+  width: 95%;
+
+  @media (min-width: 768px) {
+    width: 720px;
+  }
+
+  @media (min-width: 992px) {
+    width: 940px;
+  }
+
+  @media (min-width: 1200px) {
+    width: 1040px;
+  }
 }
 
 .simple-keyboard {
