Fix home page facets style.

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -29,10 +29,12 @@
   list-style: none;
 }
 // Reset styling of hierarchical facets on the home page:
-.home-facet.facet-tree li {
+.home-facet .facet-tree li {
   line-height: inherit;
   padding-top: 0;
   padding-bottom: 0;
+  border: 0;
+
   .facet-tree__toggle-open {
     line-height: inherit;
     padding-top: 0;
