--- a/themes/bootstrap3/templates/layout/js-icons.phtml
+++ b/themes/bootstrap3/templates/layout/js-icons.phtml
@@ -7,10 +7,10 @@ $list = [
     'ui-dots-menu',
     // Facets
     'facet-checked',
-    'facet-closed',
+    'facet-collapse',
     'facet-exclude',
+    'facet-expand',
     'facet-noncollapsible',
-    'facet-opened',
     'facet-unchecked',
     // Hierarchy tree
     'format-file',
