--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -35,7 +35,7 @@
   padding-bottom: 0;
   border: 0;
 
-  .facet-tree__toggle-open {
+  .facet-tree__toggle-expanded {
     line-height: inherit;
     padding-top: 0;
     padding-bottom: 0;
