Fix bad wrapping when the toggle didn't fit.

--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -203,7 +203,7 @@ h3.facet-title {
     padding-left: .2rem;
 
     .facet-tree__toggle-expanded {
-      width: 1.4rem;
+      flex: 1 1;
       border: 0;
       background: none;
 
