--- a/themes/root/templates/Email/login-warning.phtml
+++ b/themes/root/templates/Email/login-warning.phtml
@@ -1,1 +1,1 @@
-<?=$this->transEsc('login_warning_message', ['%%title%%' => $this->title])?>
+<?=$this->transEsc('login_warning_message', ['%%title%%' => $this->title]);
