--- a/themes/bootstrap3/templates/myresearch/profile.phtml
+++ b/themes/bootstrap3/templates/myresearch/profile.phtml
@@ -111,35 +111,23 @@
       ?>
     </table>
     <?php
-      $proxyHeadings = $proxyValues = [];
+      $proxyValues = [];
       if (!empty($this->proxiedUsers)) {
-        $proxyHeadings[] = 'proxy_list_for';
-        $proxyValues[] = $this->proxiedUsers;
+        $proxyValues['proxy_list_for'] = $this->proxiedUsers;
       }
       if (!empty($this->proxyingUsers)) {
-        $proxyHeadings[] = 'proxy_list_by';
-        $proxyValues[] = $this->proxyingUsers;
+        $proxyValues['proxy_list_by'] = $this->proxyingUsers;
       }
     ?>
-    <?php if (!empty($proxyHeadings)): ?>
+    <?php if (!empty($proxyValues)): ?>
       <h3><?=$this->transEsc('proxy_list_heading')?></h3>
-      <table class="table table-striped catalog-proxy-list">
-        <tr>
-          <?php foreach ($proxyHeadings as $proxyHeading): ?>
-            <th scope="col"><?=$this->transEsc($proxyHeading)?></th>
-          <?php endforeach; ?>
-        </tr>
-        <tr>
-          <?php foreach ($proxyValues as $proxyValueGroup): ?>
-            <td>
-              <?php natsort($proxyValueGroup); ?>
-              <?php foreach ($proxyValueGroup as $proxyValue): ?>
-                <?=$this->escapeHtml($proxyValue)?><br>
-              <?php endforeach; ?>
-            </td>
-          <?php endforeach; ?>
-        </tr>
-      </table>
+      <?php foreach ($proxyValues as $proxyHeading => $proxyValueGroup): ?>
+        <h4><?=$this->transEsc($proxyHeading)?></h4>
+        <?php natsort($proxyValueGroup); ?>
+        <?php foreach ($proxyValueGroup as $proxyValue): ?>
+          <?=$this->escapeHtml($proxyValue)?><br>
+        <?php endforeach; ?>
+      <?php endforeach; ?>
     <?php endif; ?>
   <?php elseif ('ils-none' !== $this->ils()->getOfflineMode() && $this->patronLoginView && !empty($this->patronLoginView->getTemplate())): ?>
     <?=$this->partial($this->patronLoginView);?>
