--- a/themes/bootstrap3/templates/myresearch/profile.phtml
+++ b/themes/bootstrap3/templates/myresearch/profile.phtml
@@ -124,9 +124,11 @@
       <?php foreach ($proxyValues as $proxyHeading => $proxyValueGroup): ?>
         <h4><?=$this->transEsc($proxyHeading)?></h4>
         <?php natsort($proxyValueGroup); ?>
-        <?php foreach ($proxyValueGroup as $proxyValue): ?>
-          <?=$this->escapeHtml($proxyValue)?><br>
-        <?php endforeach; ?>
+        <ul>
+          <?php foreach ($proxyValueGroup as $proxyValue): ?>
+            <li><?=$this->escapeHtml($proxyValue)?></li>
+          <?php endforeach; ?>
+        </ul>
       <?php endforeach; ?>
     <?php endif; ?>
   <?php elseif ('ils-none' !== $this->ils()->getOfflineMode() && $this->patronLoginView && !empty($this->patronLoginView->getTemplate())): ?>
