--- a/themes/bootstrap3/templates/myresearch/profile.phtml
+++ b/themes/bootstrap3/templates/myresearch/profile.phtml
@@ -121,6 +121,7 @@
     ?>
     <?php if (!empty($proxyValues)): ?>
       <h3><?=$this->transEsc('proxy_list_heading')?></h3>
+      <p><?=$this->transEsc('proxy_list_description')?></p>
       <?php foreach ($proxyValues as $proxyHeading => $proxyValueGroup): ?>
         <h4><?=$this->transEsc($proxyHeading)?></h4>
         <?php natsort($proxyValueGroup); ?>
