--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -597,6 +597,7 @@ table.search-history-table {
   }
 
   #searchForm-reset {
+    display: none;
     bottom: 0;
     width: 2em;
     border: none;
