implemented explain feature

--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -20,6 +20,7 @@ $fa-font-path: "../../bootstrap3/css/fonts";
 @import "components/channels";
 @import "components/cookie-consent/index";
 @import "components/devtools";
+@import "components/explain";
 @import "components/form";
 @import "components/icons";
 @import "components/js-tree";
