--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -351,11 +351,14 @@ body.rtl {
 .searchtools {
   h2 {
     display: inline-block;
+    margin: 0;
     font-size: inherit;
     font-weight: bold;
+    vertical-align: middle;
   }
   ul {
     display: inline-block;
+    margin: 0;
     padding-left: 0;
     li {
       display: inline;
