Fix "and" facets.

--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -239,7 +239,7 @@ h3.facet-title {
         width: calc(100% - 3.0em);
       }
 
-      .icon-link__label {
+      .facet-value {
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
