--- a/themes/bootprint3/scss/bootprint.scss
+++ b/themes/bootprint3/scss/bootprint.scss
@@ -154,6 +154,9 @@ ul.random.image li img { margin: 0 auto; }
   .facet-group label.list-group-item input[type=checkbox] { margin-top: 2px; }
 
   .facet { padding: 7px 10px 6px; }
+  .facet-tree .facet {
+    padding-left: 2px;
+  }
   .facet.active,
   .facet.active:hover,
   .active-filters .facet {
