--- a/themes/bootstrap3/scss/components/sidebar.scss
+++ b/themes/bootstrap3/scss/components/sidebar.scss
@@ -250,6 +250,10 @@ h3.facet-title {
     ul {
       padding-left: 1rem;
       flex: 1;
+      .facet {
+        padding-top: 0.2rem;
+        padding-bottom: 0.2rem;
+      }
     }
   }
 
