--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -371,6 +371,12 @@ body.rtl {
     display: flex;
     padding-left: 1rem;
 
+    &.grid {
+      display: grid;
+      column-gap: 1rem;
+      // grid-template-columns is set dynamically in stack-grid.phtml.
+    }
+
     .result { margin-left: 0; }
     .result-body {
       float: none;
