change backgound of keyboard selection button when a keyboard is activated

--- a/themes/bootprint3/scss/search.scss
+++ b/themes/bootprint3/scss/search.scss
@@ -80,6 +80,12 @@
       }
     }
 
+    &:not(.open) {
+      .activated:not(:hover){
+        background: lighten($brand-primary, 35%);
+      }
+    }
+
     .btn-primary {
       height: 20px;
     }
