--- a/themes/sandal/scss/search.scss
+++ b/themes/sandal/scss/search.scss
@@ -200,10 +200,18 @@
       background-color: white;
 
       &:hover, &:focus {
-        color: $input-color;
-        background-color: $header-light;
+        color: white;
+        background-color: $header-bg;
       }
     }
+
+    &:not(.open) {
+      .activated:not(:hover){
+        background: $header-light;
+      }
+    }
+
+
 
     .dropdown-menu .active a,
     .dropdown-menu .active a:hover {
