Add an icon set for unicode symbols and use it in hierarchical facets.

--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -207,6 +207,7 @@ h3.facet-title {
       flex: 1 1;
       border: 0;
       background: none;
+      max-width: 1.5em;
 
       &:hover {
         background-color: @list-group-hover-bg;
