--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -273,14 +273,27 @@ footer {
   align-items: center;
 }
 .cart-controls .checkbox {
-  padding-right: 1rem;
-  padding-bottom: 0.25rem;
+  margin-top: 0.5rem;
+  /* wrap below */
+  order: 1;
+  flex-basis: 100%;
 }
 .cart-controls .toolbar-btn {
   &:extend(.toolbar-btn);
   &:extend(.icon-link);
 
   margin: 0;
+}
+
+@media (min-width: 992px) {
+  .cart-controls .checkbox {
+    margin-block: 0;
+    padding-inline-end: 1rem;
+    padding-bottom: 0.25rem;
+    /* place inline */
+    order: unset;
+    flex-basis: auto;
+  }
 }
 
 .nav .btn-bookbag-toggle { float: left; }
