--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -266,17 +266,23 @@ footer {
 }
 
 /* ------ Cart ------ */
-.cart-controls {
+.cart-controls,
+.cart-control-btns {
   display: flex;
   flex-wrap: wrap;
   gap: 0.25rem;
   align-items: center;
 }
-.cart-controls .checkbox {
+.cart-controls > .checkbox {
   margin-top: 0.5rem;
   /* wrap below */
   order: 1;
   flex-basis: 100%;
+}
+.cart-control-btns {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .cart-controls .toolbar-btn {
   &:extend(.toolbar-btn);
@@ -286,7 +292,7 @@ footer {
 }
 
 @media (min-width: 992px) {
-  .cart-controls .checkbox {
+  .cart-controls > .checkbox {
     margin-block: 0;
     padding-inline-end: 1rem;
     padding-bottom: 0.25rem;
