--- a/themes/bootstrap3/templates/checkouts/history.phtml
+++ b/themes/bootstrap3/templates/checkouts/history.phtml
@@ -42,34 +42,39 @@
       <form name="purge_history" method="post" action="<?=$this->url('checkouts-purgehistory')?>" id="purge_history" data-disable-on-submit>
       <input type="hidden" id="submitType" name="purgeSelected" value="1">
       <input type="hidden" name="csrf" value="<?=$this->escapeHtmlAttr($this->auth()->getManager()->getCsrfHash())?>">
-      <div class="toolbar">
-        <div class="checkbox">
-          <?php if ($purgeSelectedAllowed): ?>
+      <?php if ($purgeSelectedAllowed || $purgeAllAllowed): ?>
+        <div class="toolbar">
+          <div class="bulk-checkbox">
             <label>
               <input type="checkbox" name="selectAll" class="checkbox-select-all">
               <?=$this->transEsc('select_all_on_page')?>
             </label>
-            <div class="btn-group">
-              <input type="submit" id="purgeSelected" name="purgeSelected" value="<?=$this->transEscAttr('loan_history_purge_selected')?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-lightbox-ignore>
-              <ul class="dropdown-menu">
-                <li class="disabled"><span class="prompt-text"><?=$this->transEsc('loan_history_confirm_purge_selected')?></span></li>
-                <li><a href="#" id="confirm_purge_selected_yes"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
-                <li><a href="#" class="confirm_purge_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
-              </ul>
-            </div>
-          <?php endif; ?>
-          <?php if ($purgeAllAllowed): ?>
-            <div class="btn-group">
-              <input type="submit" id="purgeAll" name="purgeAll" value="<?=$this->transEscAttr('loan_history_purge_all')?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-lightbox-ignore>
-              <ul class="dropdown-menu">
-                <li class="disabled"><span class="prompt-text"><?=$this->transEsc('loan_history_confirm_purge_all')?></span></li>
-                <li><a href="#" id="confirm_purge_all_yes"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
-                <li><a href="#" class="confirm_purge_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
-              </ul>
-            </div>
-          <?php endif; ?>
+          </div>
+          <ul class="action-toolbar">
+            <?php if ($purgeSelectedAllowed): ?>
+              <li class="btn-group">
+                <input type="submit" id="purgeSelected" name="purgeSelected" value="<?=$this->transEscAttr('loan_history_purge_selected')?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-lightbox-ignore>
+                <ul class="dropdown-menu">
+                  <li class="disabled"><span class="prompt-text"><?=$this->transEsc('loan_history_confirm_purge_selected')?></span></li>
+                  <li><a href="#" id="confirm_purge_selected_yes"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
+                  <li><a href="#" class="confirm_purge_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
+                </ul>
+              </li>
+            <?php endif; ?>
+
+            <?php if ($purgeAllAllowed): ?>
+              <li class="btn-group">
+                <input type="submit" id="purgeAll" name="purgeAll" value="<?=$this->transEscAttr('loan_history_purge_all')?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-lightbox-ignore>
+                <ul class="dropdown-menu">
+                  <li class="disabled"><span class="prompt-text"><?=$this->transEsc('loan_history_confirm_purge_all')?></span></li>
+                  <li><a href="#" id="confirm_purge_all_yes"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
+                  <li><a href="#" class="confirm_purge_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
+                </ul>
+              </li>
+            <?php endif; ?>
+          </ul>
         </div>
-      </div>
+        <?php endif; ?>
     <?php endif; ?>
 
     <ul class="record-list">
