[VUFIND-1637] Do not override explicit searchClassId w/search memory.

--- a/themes/bootstrap3/templates/search/searchbox.phtml
+++ b/themes/bootstrap3/templates/search/searchbox.phtml
@@ -1,6 +1,8 @@
 <?php
-    // Initialize from current search (if available) or defaults:
-    if ($results = ($this->results ?? $this->searchMemory()->getCurrentSearch())) {
+    // Initialize from current search (if available and not explicitly overridden) or defaults:
+    if (!isset($this->searchClassId)
+      && ($results = ($this->results ?? $this->searchMemory()->getCurrentSearch()))
+    ) {
       $params = $results->getParams();
       $this->searchClassId = $params->getSearchClassId();
       $hiddenFilters = $params->getHiddenFilters();
