--- a/themes/bootstrap3/templates/combined/jump-links.phtml
+++ b/themes/bootstrap3/templates/combined/jump-links.phtml
@@ -1,5 +1,5 @@
 <div class="combined-jump-links">
-  <span>Jump to Results:</span>
+  <span><?=$this->translate('combined_jump_links_intro')?></span>
   <ul>
     <?php foreach ($combinedResults as $section) : ?>
       <li>
