--- a/themes/bootstrap3/templates/search/searchbox.phtml
+++ b/themes/bootstrap3/templates/search/searchbox.phtml
@@ -1,27 +1,29 @@
 <?php
     // Initialize from current search (if available and not explicitly overridden) or defaults:
-    if (!isset($this->searchClassId)
-      && ($results = ($this->results ?? $this->searchMemory()->getCurrentSearch()))
-    ) {
+    if ($results = ($this->results ?? $this->searchMemory()->getCurrentSearch())) {
       $params = $results->getParams();
-      $this->searchClassId = $params->getSearchClassId();
-      $hiddenFilters = $params->getHiddenFilters();
-      $lastSort = $params->getSort();
-      $lastLimit = $params->getLimit();
+      $this->searchClassId = $this->overrideSearchClassId ?? $params->getSearchClassId();
       $options = $results->getOptions();
     } else {
       if (!isset($this->searchClassId)) {
           $config = $this->config()->get('config');
-          $this->searchClassId = $config->Site->defaultSearchBackend ?? 'Solr';
+          $this->searchClassId = $this->overrideSearchClassId ?? $config->Site->defaultSearchBackend ?? 'Solr';
       }
       $options = $this->searchOptions($this->searchClassId);
+      $params = null;
+    }
+    // Initialize from current search if eligible, defaults otherwise:
+    if (isset($params) && $this->searchClassId === $params->getSearchClassId()) {
+      $hiddenFilters = $params->getHiddenFilters();
+      $lastSort = $params->getSort();
+      $lastLimit = $params->getLimit();
+    } else {
       $hiddenFilters = $this->searchTabs()->getHiddenFilters($this->searchClassId, true, $this->ignoreHiddenFiltersInRequest ?? false);
       $lastSort = $this->searchMemory()->getLastSort($this->searchClassId);
       $lastLimit = $this->searchMemory()->getLastLimit($this->searchClassId);
-      $params = null;
     }
 
-    // Load search actions and settings (if any):
+  // Load search actions and settings (if any):
     $handlers = $this->searchbox()->getHandlers(
         $this->searchClassId,
         $this->searchIndex ?? null
