--- a/themes/root/templates/Helpers/icons/unicode.phtml
+++ b/themes/root/templates/Helpers/icons/unicode.phtml
@@ -1,1 +1,1 @@
-<span class="icon icon--font icon--unicode" role="img" aria-hidden="true">&#x<?=$this->transEsc($this->icon)?>;</span>
+<span class="icon icon--font icon--unicode" role="img" aria-hidden="true">&#x<?=$this->escapeHtml($this->icon)?>;</span>
