Add class and attribute support.

--- a/themes/root/templates/Helpers/icons/unicode.phtml
+++ b/themes/root/templates/Helpers/icons/unicode.phtml
@@ -1,1 +1,5 @@
-<span class="icon icon--font icon--unicode" role="img" aria-hidden="true">&#x<?=$this->escapeHtml($this->icon)?>;</span>
+<?php
+    $this->headLink()->appendStylesheet($this->src);
+    $className = trim('icon icon--font icon--unicode ' . ($this->extra['class'] ?? ''));
+?>
+<span class="<?=$className?>"<?=$this->attrs ?> role="img" aria-hidden="true">&#x<?=$this->escapeHtml($this->icon)?>;</span>
