Add record counts to jump links

--- a/themes/bootstrap3/templates/combined/jump-links.phtml
+++ b/themes/bootstrap3/templates/combined/jump-links.phtml
@@ -2,7 +2,7 @@
   <span><?=$this->translate('combined_jump_links_intro')?></span>
   <ul>
     <?php foreach ($combinedResults as $section) : ?>
-      <li>
+      <li class="<?= $section['domId'] ?>">
         <a href="#<?= $section['domId'] ?>"><?= $section['label'] ?></a>
       </li>
     <?php endforeach; ?>
