--- a/themes/bootstrap3/templates/combined/results-list.phtml
+++ b/themes/bootstrap3/templates/combined/results-list.phtml
@@ -8,6 +8,17 @@
   // More link should use default limit, not custom limit:
   $moreUrl = $this->url($params->getOptions()->getSearchAction()) . $results->getUrlQuery()->setPage(1)->setLimit($params->getOptions()->getDefaultLimit());
 ?>
+<?php
+    $countsJs = <<<JS
+      $(document).ready(function() {
+        let count = $recordTotal;
+        count = count.toLocaleString();
+        const span = $("<span class='record-total'>(" + count + ")</span>");
+        $('.combined-jump-links .combined_$searchClassId').append(span);
+      });
+      JS;
+?>
+<?=$this->inlineScript(\Laminas\View\Helper\HeadScript::SCRIPT, $countsJs, 'SET')?>
 <?php if (isset($currentSearch['more_link']) && $currentSearch['more_link']): ?>
   <div class="pull-right flip">
     <a href="<?=$moreUrl?>" class="btn btn-link icon-link">
