feat: allow lightbox to grow to fit its content.

--- a/themes/bootstrap3/less/components/lightbox.less
+++ b/themes/bootstrap3/less/components/lightbox.less
@@ -1,5 +1,11 @@
 #modal { background-color: rgba(0,0,0,.2); }
 
+#modal .modal-dialog {
+  width: fit-content;
+  min-width: ~"min(600px, 100%)";
+  max-width: 1200px;
+}
+
 #modal .modal-content > .close {
   position: absolute;
   top: 0;
